--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@angular/build": "^20.2.0-next.2",
     "@angular/cli": "^20.2.0-next.2",
     "@angular/compiler-cli": "^20.2.0-next.0",
+    "@softarc/eslint-plugin-sheriff": "^0.19.0",
+    "@softarc/sheriff-core": "^0.19.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
