--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "lint": "eslint .",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -33,15 +34,24 @@
     "@angular/build": "^20.2.0-next.2",
     "@angular/cli": "^20.2.0-next.2",
     "@angular/compiler-cli": "^20.2.0-next.0",
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.32.0",
+    "@eslint/json": "^0.13.1",
+    "@eslint/markdown": "^7.1.0",
     "@softarc/eslint-plugin-sheriff": "^0.19.0",
     "@softarc/sheriff-core": "^0.19.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "^20.1.1",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0",
     "jasmine-core": "~5.9.0",
+    "jiti": "^2.5.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.39.0"
   }
 }
