--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular/animations": "^20.1.5",
     "@angular/build": "^20.2.0-next.2",
     "@angular/cli": "^20.2.0-next.2",
     "@angular/compiler-cli": "^20.2.0-next.0",
@@ -40,6 +41,8 @@
     "@eslint/markdown": "^7.1.0",
     "@softarc/eslint-plugin-sheriff": "^0.19.0",
     "@softarc/sheriff-core": "^0.19.0",
+    "@testing-library/angular": "^17.4.0",
+    "@testing-library/dom": "^10.4.1",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "^20.1.1",
     "eslint": "^9.32.0",
@@ -52,6 +55,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.39.0"
+    "typescript-eslint": "^8.39.0",
+    "zone.js": "^0.15.1"
   }
 }
