--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,9 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine",
+      "@testing-library/angular",
+      "@testing-library/dom"
     ]
   },
   "include": [
