--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "angular-eslint": "^20.1.1",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.9.0",
     "jiti": "^2.5.1",
     "karma": "~6.4.0",
@@ -54,6 +55,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^16.1.4",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.39.0",
     "zone.js": "^0.15.1"
