--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
