--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=true --code-coverage",
     "prepare": "husky || echo 'Husky not installed, skipping prepare script.'"
   },
   "prettier": {
