--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watch=true --code-coverage",
+    "test": "ng test --watch=false --code-coverage",
     "prepare": "husky || echo 'Husky not installed, skipping prepare script.'"
   },
   "prettier": {
@@ -59,7 +59,6 @@
     "lint-staged": "^16.1.4",
     "prettier": "^3.6.2",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.39.0",
-    "zone.js": "^0.15.1"
+    "typescript-eslint": "^8.39.0"
   }
 }
