--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app-with-sheriff",
   "version": "0.0.0",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
