--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: pnpm/action-setup@v4
-    - run: pnpm ci
+    - run: pnpm install --frozen-lockfile
     - run: npm run build
     - run: npm run lint
     - run: npm run test
