--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,14 +7,62 @@ on:
     branches: [ "main" ]
 
 jobs:
+  install:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - name: Cache node_modules and app
+        id: cache-modules
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: |
+            node_modules
+            src/app
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+            npm-
+      - if: ${{ steps.cache-modules.outputs.cache-hit != 'true' }}
+        run: pnpm install --frozen-lockfile
+
+
   build:
+    needs: install
+
+    strategy:
+      matrix:
+        commands: [ build, lint, test ]
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
     - uses: pnpm/action-setup@v4
-    - run: pnpm install --frozen-lockfile
-    - run: npm run build
-    - run: npm run lint
-    - run: npm run test
+    - name: Restore node_modules and app Cache
+      id: cache-modules
+      uses: actions/cache/restore@v4
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: |
+          node_modules
+          src/app
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json', 'src/assets/openapi-*.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+          npm-
+
+    - if: ${{ steps.cache-modules.outputs.cache-hit != 'true' }}
+      run: exit 1
+
+    - run: npm run ${{ matrix.commands }}
+      env:
+        CI: true
