--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watch=false --code-coverage",
+    "test": "ng test --watch=false --code-coverage --browsers=ChromeHeadless",
     "prepare": "husky || echo 'Husky not installed, skipping prepare script.'"
   },
   "prettier": {
